force-app/main/default/objects/Contact/fields/Is_Member__c.field-meta.xml
<CustomField>
    <fullName>Is_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Member</label>
    <type>Checkbox</type>
</CustomField>