force-app/main/default/objects/Contact/fields/Orange_ID__c.field-meta.xml
<CustomField>
    <fullName>Orange_ID__c</fullName>
    <externalId>true</externalId>
    <label>Orange ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>