force-app/main/default/objects/Contact/fields/Total_Hold__c.field-meta.xml
<CustomField>
    <fullName>Total_Hold__c</fullName>
    <label>Total Hold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>