force-app/main/default/objects/Contact/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <externalId>true</externalId>
    <label>Username</label>
    <length>20</length>
    <type>Text</type>
</CustomField>